--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,39 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
     tools:context=".MainActivity">
 
     <ImageView
         android:id="@+id/yourImageView"
-        android:layout_width="match_parent"
+        android:layout_width="500dp"
         android:layout_height="match_parent"
-        android:src="@drawable/plane"
-        android:scaleType="centerCrop" />
+        android:layout_gravity="bottom"
+        android:layout_marginBottom="10dp"
+        android:padding="0dp"
+        android:src="@drawable/plane" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/let_s_find_out_how_to_get_to_the_plane"
-        android:textSize="24sp"
-        android:textColor="#FFFFFF"
-        android:layout_gravity="center"
-        android:layout_marginBottom="16dp" />
-
-    <EditText
-        android:id="@+id/textInput"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#D3D3D3"
-        android:hint="@string/flight_number_hint" />
+        android:orientation="vertical"
+        android:layout_gravity="center"
+        android:paddingStart="32dp"
+        android:paddingEnd="32dp">
 
-    <Button
-        android:id="@+id/findWayButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/find_the_way"
-        android:layout_gravity="center_horizontal|bottom"
-        android:layout_marginBottom="32dp" />
-</FrameLayout> 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="start"
+            android:textStyle="bold"
+            android:text="@string/let_s_find_out_how_to_get"
+            android:textSize="24sp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="start"
+            android:textStyle="bold"
+            android:layout_marginBottom="16dp"
+            android:text="@string/to_the_plane"
+            android:textSize="34sp"
+            tools:ignore="RtlHardcoded" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="4dp"
+            android:text="@string/what_is_your_flight_number" />
+
+        <Spinner
+            android:id="@+id/airlineSpinner"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:layout_marginBottom="8dp"
+            android:background="#d7d7d7"
+            android:contentDescription="@string/select_airline_hint" />
+
+        <EditText
+            android:id="@+id/textInput"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:background="#d7d7d7"
+            android:hint="@string/flight_number_hint"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
+            android:inputType="textCapCharacters" />
+
+        <Button
+            android:id="@+id/findWayButton"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginTop="16dp"
+            android:backgroundTint="#007AFF"
+            android:text="@string/find_the_way" />
+    </LinearLayout>
+</FrameLayout>
